--- a/portfolio.html
+++ b/portfolio.html
@@ -150,12 +150,11 @@
         </main>
         <!--подвал-->
         <footer class="footer-block">
-            <div class="container footer-container">
+            <div class="container">
                 <a href="" class="logo link">Web<span class="footer-logo">Studio</span></a>
                 <address class="address-section">
-                    <div class="address-container">
                     <ul class="address-list list">
-                        <li class="address-item" >
+                        <li class="address-item">
                             <a class="address-link link address-text" href="">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li class="address-item">
@@ -165,7 +164,6 @@
                             <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
-                    </div>
                 </address>
             </div>
         </footer>
